--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,13 @@
 version: 2
 jobs:
-  build:
-    docker:
-      - image: circleci/<language>:<version TAG>
-    steps:
-      - checkout
-      - run: <command>
   test:
     docker:
-      - image: circleci/<language>:<version TAG>
+      - image: hirvijo/robot:1.1
     steps:
       - checkout
-      - run: <command>
+      - run: robot .
 workflows:
   version: 2
   build_and_test:
     jobs:
-      - build
       - test
