--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,13 @@
 version: 2
 jobs:
+  build:
+    docker:
+      - image: circleci/node
+    steps:
+      - checkout
+      - store_artifacts:
+            path: calculator-release.apk
+            destination: artifact-file
   test:
     docker:
       - image: hirvijo/robot:1.1
@@ -10,4 +18,5 @@ workflows:
   version: 2
   build_and_test:
     jobs:
+      - build
       - test
