--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,8 @@ workflows:
   build_and_test:
     jobs:
       - build
-      - test:
-          type: approval
+      - hold:
+        type: approval
           requires:
             - build
+      - test
