--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,3 +32,7 @@ workflows:
     triggers:
       - schedule:
           cron: "15 * * * *"
+          filters:
+            branches:
+              only:
+                - master
