--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ workflows:
             - hold
     triggers:
       - schedule:
-          cron: "0 0 * * *"
+          cron: "5 * * * *"
           filters:
             branches:
               only: 
