--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ workflows:
       - test
     triggers:
       - schedule:
-          cron: "0,15,30,45 * * * *"
+          cron: "* * 1 * *"
           filters:
             branches:
               only: 
