--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,25 @@ jobs:
       - store_artifacts:
             path: calculator-release.apk
             destination: app-to-test
+      - run: mkdir -p workspace
+      - run: echo "Hello, world!" > workspace/echo-output
+      - persist_to_workspace:
+          root: workspace
+          paths:
+            - echo-output
   test:
     docker:
       - image: hirvijo/robot:1.1
     steps:
       - checkout
+      - attach_workspace:
+          at: /tmp/workspace
+      - run: |
+          if [[ `cat /tmp/workspace/echo-output` == "Hello, world!" ]]; then
+            echo "It worked!";
+          else
+            echo "Nope!"; exit 1
+          fi
       - run: robot -d tmp/report --variable APP:"https://18-145885837-gh.circle-artifacts.com/0/app-to-test" .
       - store_artifacts:
             path: tmp/report
