--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,14 +21,17 @@ jobs:
       - checkout
       - attach_workspace:
           at: /tmp/workspace
-      - run: cat /tmp/workspace/echo-output
-      - run:
-          name: Define Environment Variable at Runtime
-          command: |
-            echo 'export BUILD_NUMBER=$(cat /tmp/workspace/echo-output)' >> $BASH_ENV
       - run: 
-          name: run tests
+          name: Read build number from file
+          command: cat /tmp/workspace/echo-output
+      - run:
+          name: Define environment variable BUILD_NUMBER
+          command: echo 'export BUILD_NUMBER=$(cat /tmp/workspace/echo-output)' >> $BASH_ENV
+      - run: 
+          name: Run tests
           command: robot -d tmp/report --variable APP:"https://18-145885837-gh.circle-artifacts.com/0/app-to-test" .
+          environment:
+            HUB: https://f2f2850c.ngrok.io/wd/hub
       - store_artifacts:
             path: tmp/report
             destination: report
