--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,20 @@ jobs:
             - android-build-number
   test:
     docker:
-      - image: hirvijo/robot:1.1
+      - image: circleci/python:2.7.14
     steps:
       - checkout
       - attach_workspace:
           at: /tmp/workspace
+      - run:
+          name: Install dependencies
+          command: |
+            pip install robotframework == 3.0.4
+            pip install robotframework-seleniumlibrary == 3.1.1
+            pip install robotframework-appiumlibrary == 1.4.6
+            pip install robotframework-requests == 0.4.7
+            pip install selenium == 3.14.0
+            pip install requests == 2.19.1
       - run: 
           name: Define environment variable BUILD_NUMBER
           command: echo 'export BUILD_NUMBER=$(cat /tmp/workspace/android-build-number)' >> $BASH_ENV
@@ -28,7 +37,7 @@ jobs:
           name: Run tests
           command: robot -d tmp/report .
           environment:
-            HUB: https://f2f2850c.ngrok.io/wd/hub
+            HUB: https://314e595d.ngrok.io/wd/hub
       - store_artifacts:
             path: tmp/report
             destination: report
