--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,12 @@ jobs:
             pip install --user robotframework-requests==0.4.7
             pip install --user selenium==3.14.0
             pip install --user requests==2.19.1
+      - run:
+          name: Setup Environment Variables
+          command: |
+            echo $PATH
+            echo 'export PATH="$HOME/.local/bin/:$PATH"' >> $BASH_ENV
+            echo $PATH
       - run: 
           name: Define environment variable BUILD_NUMBER
           command: echo 'export BUILD_NUMBER=$(cat /tmp/workspace/android-build-number)' >> $BASH_ENV
