--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - store_artifacts:
             path: calculator-release.apk
-            destination: app-to-test
+            destination: app-to-test    
       - run: mkdir -p workspace
       - run: echo $CIRCLE_BUILD_NUM > workspace/android-build-number
       - persist_to_workspace:
@@ -19,8 +19,10 @@ jobs:
       - image: circleci/python:2.7.14
     steps:
       - checkout
+      
       - attach_workspace:
           at: /tmp/workspace
+          
       - run:
           name: Install dependencies
           command: |
@@ -30,20 +32,19 @@ jobs:
             pip install --user robotframework-requests==0.4.7
             pip install --user selenium==3.14.0
             pip install --user requests==2.19.1
+            
       - run:
           name: Setup Environment Variables
           command: |
-            echo $PATH
             echo 'export PATH="$HOME/.local/bin/:$PATH"' >> $BASH_ENV
-            echo $PATH
-      - run: 
-          name: Define environment variable BUILD_NUMBER
-          command: echo 'export BUILD_NUMBER=$(cat /tmp/workspace/android-build-number)' >> $BASH_ENV
+            echo 'export BUILD_NUMBER=$(cat /tmp/workspace/android-build-number)' >> $BASH_ENV
+
       - run: 
           name: Run tests
           command: robot -d tmp/report .
           environment:
             HUB: https://314e595d.ngrok.io/wd/hub
+            
       - store_artifacts:
             path: tmp/report
             destination: report
